Bug 365804 - Print Dialog doesn't respect Printer Hierarchy / Order
Summary: Print Dialog doesn't respect Printer Hierarchy / Order
Status: RESOLVED FIXED
Alias: None
Product: print-manager
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Nicoletti
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-18 08:41 UTC by Richard Llom
Modified: 2018-01-27 01:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (41.37 KB, image/png)
2016-08-22 12:43 UTC, Richard Llom
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Llom 2016-07-18 08:41:45 UTC
When opening the print dialog from any app, the printer in the printer list are ordered in an alphabetic order. However in the printer system settings module, they are not!
See attached screenshot for example.

This creates unnecessary confusion. The printer order should be the same in both.

Reproducible: Always
Comment 1 Christoph Feck 2016-07-18 20:34:33 UTC
Please state which you want fixed: The system settings module, or the print dialog.
Comment 2 Christoph Feck 2016-07-31 10:45:00 UTC
If you can provide the information requested in comment #1, please add it.
Comment 3 Richard Llom 2016-08-22 12:43:18 UTC
Created attachment 100711 [details]
screenshot

Ooops, seems like I forgot the actual screenshot - here you go.
Comment 4 Richard Llom 2016-08-22 12:45:21 UTC
(In reply to Christoph Feck from comment #1)
> Please state which you want fixed: The system settings module, or the print
> dialog.

Sorry, but I don't know - I want them to be in "sync", I don't know where you would actually fix this.
Comment 5 Daniel Nicoletti 2018-01-27 01:10:47 UTC
Git commit ad261afa38dee796781eb8ec8cf39e0d393c4faf by Daniel Nicoletti.
Committed on 27/01/2018 at 01:07.
Pushed by dantti into branch 'master'.

Do not sort printers by default and remote

M  +18   -18   libkcups/PrinterSortFilterModel.cpp
M  +1    -1    libkcups/PrinterSortFilterModel.h

https://commits.kde.org/print-manager/ad261afa38dee796781eb8ec8cf39e0d393c4faf