Do not sort printers by default and remote

BUG: 365804